--- a/percepcion/package.xml
+++ b/percepcion/package.xml
@@ -11,6 +11,10 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+  <depend>joblib</depend>
+  <depend>numpy</depend>
+  <depend>opencv-python</depend>
+  <depend>scikit-learn</depend>
 
   <export>
     <build_type>ament_python</build_type>
