--- a/guiado/config/Aruco_pos.yaml
+++ b/guiado/config/Aruco_pos.yaml
@@ -1,4 +1,10 @@
 arucos:
+  - id: 31
+    position:
+      x: 0.0
+      y: 5.5
+    orientation: -3.14159
+
   - id: 30
     position:
       x: 0.0
@@ -7,18 +13,61 @@ arucos:
 
   - id: 33
     position:
+      x: 0.0
+      y: 1.5
+    orientation: -3.14159
+
+  - id: 9
+    position:
+      x: 1.5
+      y: 0.0
+    orientation: -1.5708
+
+  - id: 6
+    position:
       x: 3.5
       y: 0.0
     orientation: -1.5708
 
-  - id: 32
+  - id: 4
+    position:
+      x: 5.5
+      y: 0.0
+    orientation: -1.5708
+
+  - id: 3
+    position:
+      x: 7.0
+      y: 1.5
+    orientation: 0.0
+
+  - id: 1
     position:
       x: 7.0
       y: 3.5
     orientation: 0.0
 
-  - id: 31
+  - id: 11
+    position:
+      x: 7.0
+      y: 5.5
+    orientation: 0.0
+
+  - id: 73
+    position:
+      x: 5.5
+      y: 7.0
+    orientation: 1.5708
+
+  - id: 5
     position:
       x: 3.5
       y: 7.0
     orientation: 1.5708
+
+  - id: 10
+    position:
+      x: 1.5
+      y: 7.0
+    orientation: 1.5708
+
