--- a/guiado/config/nav2_params_guiado.yaml
+++ b/guiado/config/nav2_params_guiado.yaml
@@ -108,7 +108,7 @@ global_costmap:
 controller_server:
   ros__parameters:
     # controller server parameters (see Controller Server for more info)
-    controller_frequency: 10.0
+    controller_frequency: 5.0 #10.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.0  #0.5
     min_theta_velocity_threshold: 0.001
@@ -170,7 +170,7 @@ controller_server:
 
 planner_server:
   ros__parameters:
-    expected_planner_frequency: 5.0  #estaba en 20.0 # luego en 1.0
+    expected_planner_frequency: 1.0  #estaba en 20.0 # luego en 1.0
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
@@ -208,13 +208,14 @@ planner_server:
 # robot_state_publisher:
 #   ros__parameters:
 
-waypoint_follower:
-  ros__parameters:
-    loop_rate: 20
-    stop_on_failure: false
-    waypoint_task_executor_plugin: "wait_at_waypoint"
-    wait_at_waypoint:
-      plugin: "nav2_waypoint_follower::WaitAtWaypoint"
-      enabled: True
-      waypoint_pause_duration: 200
+# waypoint_follower:
+  # ros__parameters:
+    # use_sim_time: false
+    # stop_on_failure: false
+    # waypoint_task_executor_plugin: "wait_at_waypoint"
+    # wait_at_waypoint:
+      # plugin: "nav2_waypoint_follower::WaitAtWaypoint"
+      # enabled: true
+      # waypoint_wait_duration: 5.0
+
 
