Changed camara implementation, now with realsense, we still need to fix the number detection

--- a/percepcion/config/lectura_cam.yaml
+++ b/percepcion/config/lectura_cam.yaml
@@ -1,43 +1,12 @@
 brain_percepcion:
   ros__parameters:
-    depth_filter:
-      min: 1630     #meters
-      max: 1800   #meters
-    numero_muestras: 50
-
-orbbec_camera_launch:
-  ros__parameters:
-    #color
-    enable_point_cloud: true
-    enable_colored_point_cloud: false
-    color_width: 640
-    color_height: 480
-    color_fps: 30
-    color_format: "RGB888"
-    enable_color: true
-    flip_color: false
-    color_qos: "default"
-    color_camera_info_qos: "default"
-    #color auto exposure and white balance
-    enable_color_auto_exposure: true
-    color_exposure: -5
-    color_gain: -5
-    enable_color_auto_white_balance: true
-    color_white_balance: -1
-    # color_brightness: 5000
+    numero_muestras: 10
+    display: true
+    model_path: "/home/pucra/Phoenyx/src/percepcion/percepcion/modelo_knn(1).pkl"
+    dump_debug_images: false
+    realsense_width: 640
+    realsense_height: 480
+    realsense_fps: 30
 
 
-    #depth
-    depth_registration: true
-    enable_depth: true
-    depth_width: 640
-    depth_height: 480
-    depth_fps: 30
-    depth_format: "Y11"
-    flip_depth: false
-    depth_qos: "default"
-    depth_camera_info_qos: "default"
-
-    #ir
-    enable_ir: false
     
